[gd_scene load_steps=4 format=3 uid="uid://p6uifkjdegg7"]

[ext_resource type="Script" path="res://CheckQuestion/MusicSheet/CheckMusicSheetQuestion.gd" id="1_64lyl"]
[ext_resource type="StyleBox" uid="uid://b5l8bij5x63n3" path="res://Assets/ButtonColor/BlueButtonNormal.tres" id="1_tfgn0"]
[ext_resource type="PackedScene" uid="uid://bkaax5tv42rpm" path="res://Scenes/MusicSheet/MusicSheet.tscn" id="2_13aay"]

[node name="CheckMusicSheetQuestion" type="CenterContainer"]
custom_minimum_size = Vector2i(1500, 620)
offset_right = 1500.0
offset_bottom = 620.0
script = ExtResource("1_64lyl")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2i(1400, 580)
offset_left = 50.0
offset_top = 20.0
offset_right = 1450.0
offset_bottom = 600.0
color = Color(0.156863, 0.156863, 0.156863, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 60.0
offset_top = 31.0
offset_right = 1440.0
offset_bottom = 589.0

[node name="Title" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2i(1380, 0)
offset_right = 1380.0
offset_bottom = 40.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="VBoxContainer/Title"]
custom_minimum_size = Vector2i(700, 0)
offset_top = 7.0
offset_right = 700.0
offset_bottom = 33.0
text = "Pregunta #:  --"

[node name="Control" type="Control" parent="VBoxContainer/Title"]
custom_minimum_size = Vector2i(560, 40)
layout_mode = 3
anchors_preset = 0
offset_left = 720.0
offset_right = 1280.0
offset_bottom = 40.0

[node name="ColorRect" type="ColorRect" parent="VBoxContainer/Title/Control"]
custom_minimum_size = Vector2i(560, 40)
offset_left = -10.0
offset_right = 560.0
offset_bottom = 40.0
color = Color(0, 0.627451, 0.45098, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/Title/Control"]
custom_minimum_size = Vector2i(270, 40)
offset_right = 270.0
offset_bottom = 32.0
theme_override_constants/separation = 10

[node name="MaxScoreLabel" type="Label" parent="VBoxContainer/Title/Control/HBoxContainer"]
offset_top = 7.0
offset_right = 288.0
offset_bottom = 33.0
text = "Puntaje m√°ximo de la pregunta: 1000"

[node name="Label" type="Label" parent="VBoxContainer/Title/Control/HBoxContainer"]
custom_minimum_size = Vector2i(160, 0)
offset_left = 298.0
offset_top = 7.0
offset_right = 458.0
offset_bottom = 33.0
text = "Puntaje Obtenido"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpinScore" type="SpinBox" parent="VBoxContainer/Title/Control/HBoxContainer"]
custom_minimum_size = Vector2i(20, 0)
offset_left = 467.0
offset_top = 4.0
offset_right = 550.063
offset_bottom = 35.0
size_flags_horizontal = 6
size_flags_vertical = 4
rounded = true
update_on_text_changed = true

[node name="QuestionBox" type="CenterContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2i(1380, 120)
offset_top = 44.0
offset_right = 1380.0
offset_bottom = 164.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="QuestionLabel" type="TextEdit" parent="VBoxContainer/QuestionBox"]
custom_minimum_size = Vector2i(1168, 90)
offset_left = 106.0
offset_top = 15.0
offset_right = 1274.0
offset_bottom = 105.0
theme_override_colors/font_readonly_color = Color(1, 1, 1, 1)
theme_override_styles/normal = ExtResource("1_tfgn0")
editable = false

[node name="Answer" type="VBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2i(1175, 0)
offset_left = 40.0
offset_top = 168.0
offset_right = 1340.0
offset_bottom = 558.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="VBoxContainer/Answer"]
offset_right = 1300.0
offset_bottom = 26.0
text = "La respuesta entregada por el alumno fue: "

[node name="Answer" type="Control" parent="VBoxContainer/Answer"]
custom_minimum_size = Vector2i(1300, 360)
layout_mode = 3
anchors_preset = 0
offset_top = 30.0
offset_right = 1300.0
offset_bottom = 390.0

[node name="MusicSheet" parent="VBoxContainer/Answer/Answer" instance=ExtResource("2_13aay")]
offset_left = -570.0
offset_top = -180.0
offset_right = 930.0
offset_bottom = 460.0
scale = Vector2(0.75, 0.75)

[connection signal="value_changed" from="VBoxContainer/Title/Control/HBoxContainer/SpinScore" to="." method="_on_spin_score_value_changed"]
